# Resonance-Engine

./: .gitignore  README  README.md  main.py  pyproject.toml  requirements.txt
html/: core_interface.html  index_ideas.html  loader.html
src/api/: routes.py
src/cache/: factory.py  interface.py  redis.py
src/database/: factory.py  firestore.py  interface.py  memory.py
src/engine/: interface.py  orchestrator.py  strategies.py
src/music/: factory.py  interface.py  spotify.py
src/schemas/: metrics.py  session.py
src/shared/: config.py  decorator.py  logger.py
tests/: test_robust_schemas.py  test_schemas.py
