[project]
name = "daggerheart-dj"
version = "0.1.0"
description = "A stats tracker and music changer"
authors = [
    {name = "giovanni",email = "gioandro91@gmail.com"}
]
license = {text = "Creative Commons (CC BY-NC-SA 4.0)"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
